@@ -1,3 +1,13 @@
+2007-09-26  Marek Habersack  <mhabersack@novell.com>
+
+	* src/mod_mono.c: added three wrapper functions to get the apache
+	configured user id, group id and user name.
+	(ensure_dashboard_initialized): attempt to remove the dashboard
+	file (if dashboard hasn't been created yet) as root, not as the
+	target user.
+
+	* src/mod_mono.h: unixd.h is not found in APACHE 1.3
+
 2007-09-16  Joshua Tauberer  <jit@occams.info>
 
 	* src/mod_mono.c (mono_execute_request): if it can't establish a
